@@ -1,3 +1,8 @@
+2004-08-25  Kevin Turner  <kevin@freegeek.org>
+
+	* fgdiag/disk/cursesdisk.py (BadblocksWidget.finished): 1.4 fix thinko
+	call to getDeviceSize that caused sfdisk error.
+
 2004-07-13    <chromakode@fgdefault>
 
 	* fgdiag/keyboard/keyboard.py (Module): Added beginnings of Arrow
